--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -r dist/*",
     "build": "npm run clean && webpack --progress --colors",
-    "start": "webpack-dev-server --progress --colors --hot --inline  --port 3000",
+    "start": "webpack-dev-server --devtool eval --progress --colors --hot --content-base dist --port 3000",
     "deploy": "NODE_ENV=production webpack -p --config webpack.dist.config.js"
   },
   "author": "Frank",
@@ -25,9 +25,12 @@
     "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "css-loader": "^0.23.1",
     "jquery": "^2.1.4",
     "marked": "^0.3.5",
     "react-transform-hmr": "^1.0.1",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack-dev-server": "^1.14.0"
   }
 }
